--- a/MyLeoRetailer/Views/PostLogin/Master/Tax/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Tax/Index.cshtml
@@ -102,7 +102,7 @@
                     <div class="form-group" style="margin-bottom: 5px; float: right;">
                         @*<label>Set Active:</label>*@
                         <label class="switch">
-                            <input checked="" value="0" type="checkbox">
+                            <input checked="" name="Tax.IsActive" value="0" type="checkbox" id="Flag">
                             <span></span>
                         </label>
                     </div>
