--- a/MyLeoRetailer/Views/Shared/_Menu.cshtml
+++ b/MyLeoRetailer/Views/Shared/_Menu.cshtml
@@ -18,6 +18,7 @@
                             <li><a href="/Product/Search"><span class="fa fa-users"></span> Product Management</a></li>
                             <li><a href="/VendorContact/Search"><span class="fa fa-users"></span> VendorContact Management</a></li>
                             <li><a href="/GiftVoucher/Search"><span class="fa fa-users"></span> GiftVoucher Management</a></li>
+                            <li><a href="/Alteration/Search"><span class="fa fa-users"></span> Alteration Management</a></li>
 
                             <li class="xn-openable">
                                 <a href="#"><span class="fa fa-clock-o"></span> Timeline</a>
