--- a/MyLeoRetailer/Views/PostLogin/Master/Size/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Size/Index.cshtml
@@ -69,7 +69,7 @@
 
                 <div class="form-group">
                     @*<label>Create / Update size group:</label>*@
-                    <input type="text" class="form-control sizegroup-filter" name="Filter.Size_Group_Name" placeholder="Enter size group to search" />
+                    <input type="text" class="form-control" name="Filter.Size_Group_Name" placeholder="Enter size group to search" />
                 </div>
 
                 <div class="list-group border-bottom push-down-20" id="Size_Group_Name_Grid">
